# YatSenOS

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
main/: .gdbinit  .nvim.lua  Cargo.toml
main/pkg/app/counter/: Cargo.toml
main/pkg/app/counter/src/: main.rs
main/pkg/app/dinner/: Cargo.toml
main/pkg/app/dinner/src/: main.rs
main/pkg/app/fact/: Cargo.toml
main/pkg/app/fact/src/: main.rs
main/pkg/app/forktest/: Cargo.toml
main/pkg/app/hello/: Cargo.toml
main/pkg/app/hello/src/: main.rs
main/pkg/app/mq/: Cargo.toml
main/pkg/app/sh/: Cargo.toml
main/pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
main/pkg/elf/src/: lib.rs
main/pkg/kernel/: Cargo.toml
main/pkg/kernel/config/: boot.conf
main/pkg/kernel/src/: lib.rs  main.rs
main/pkg/kernel/src/drivers/: filesystem.rs  input.rs  mod.rs  serial.rs  uart16550.rs
main/pkg/kernel/src/drivers/ata/: bus.rs  mod.rs
main/pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
main/pkg/kernel/src/interrupt/apic/: xapic.rs
main/pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
main/pkg/kernel/src/memory/: address.rs  frames.rs  gdt.rs  mod.rs  user.rs
main/pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs  sync.rs
main/pkg/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
main/pkg/kernel/src/utils/: func.rs  logger.rs  macros.rs  mod.rs  resource.rs
main/pkg/lib/: Cargo.toml
main/pkg/lib/src/: io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
main/pkg/syscall/: Cargo.toml
main/pkg/syscall/src/: lib.rs
(+12 files in other folders)
