[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
elf = { workspace = true }
lazy_static = { workspace = true }
uefi = { workspace = true }
crossbeam-queue = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
xmas-elf = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true }
bitflags = { workspace = true }
bit_field = { workspace = true }
libm = { workspace = true }
linked_list_allocator = { workspace = true }
syscall_def = { workspace = true }
volatile = { workspace = true }
